# rujimi

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  dev.sh  docker-compose.yml  run.sh
hajimiUI/: vite.config.js
src/: main.rs
src/api/: auth.rs  dashboard.rs  mod.rs  routes.rs
src/config/: manager.rs  mod.rs  persistence.rs  safety.rs  settings.rs
src/models/: schemas.rs
src/services/: embedding.rs  gemini.rs  mod.rs  openai.rs  response_wrapper.rs
src/templates/: index.html  login.html
src/utils/: api_key.rs  auth.rs  browser.rs  cache.rs  error_handling.rs  logging.rs  maintenance.rs  mod.rs  rate_limiting.rs  request.rs  response.rs  stats.rs  version.rs
src/vertex/: api_helpers.rs  auth.rs  client.rs  config.rs  credentials_manager.rs  main.rs  message_processing.rs  mod.rs  model_loader.rs  models.rs  vertex_ai_init.rs
src/vertex/routes/: chat_api.rs  mod.rs  models_api.rs
