[package]
name = "rujimi"
version = "1.0.2"
edition = "2021"
description = "High-performance Gemini API proxy written in Rust"
license = "MIT"
repository = "https://github.com/wyeeeee/hajimi"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async runtime
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Caching and storage
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"

# Security and auth
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Google Cloud and AI
google-cloud-auth = "0.17"
google-cloud-token = "0.1"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"

# Rate limiting
governor = "0.7"
nonzero_ext = "0.3"

# Metrics and monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Template engine (for serving frontend)
tera = "1.20"

# File serving and static assets
mime_guess = "2.0"

# Environment and OS
hostname = "0.4"

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.0"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
